syntax = "proto3";

package agi.middleware.capacity.v1;

option go_package = "github.com/NpoolPlatform/message/agi/middleware/v1/capacity";

import "basetypes/agi/v1/enums.proto";
import "basetypes/v1/conds.proto";

message CapacityReq {
    optional uint32 ID = 10;
    optional string EntID = 20;
    optional string AppGoodID = 30;
    optional basetypes.agi.v1.CapacityKey CapacityKey = 40;
    optional string Value = 50;
    optional string Description = 60;
}

message Capacity {
    // @inject_tag: sql:"id"
    uint32 ID = 10;
    // @inject_tag: sql:"ent_id"
    string EntID = 20;
    // @inject_tag: sql:"app_good_id"
    string AppGoodID = 30;
    // @inject_tag: sql:"capacity_key"
    string CapacityKeyStr = 40;
    basetypes.agi.v1.CapacityKey CapacityKey = 50;
    // @inject_tag: sql:"capacity_value"
    string Value = 60;
    // @inject_tag: sql:"description"
    string Description = 70;
    // @inject_tag: sql:"created_at"
    uint32 CreatedAt = 1000;
    // @inject_tag: sql:"updated_at"
    uint32 UpdatedAt = 2000;
}

message Conds {
    optional basetypes.v1.Uint32Val ID = 10;
    optional basetypes.v1.Uint32SliceVal IDs = 20;
    optional basetypes.v1.StringVal EntID = 30;
    optional basetypes.v1.StringSliceVal EntIDs = 40;
    optional basetypes.v1.StringVal AppGoodID = 50;
    optional basetypes.v1.StringSliceVal AppGoodIDs = 60;
}

